搜索引擎优化

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ include: ['.htaccess']
 title:            "FuckBilibili"
 # tagline:          Black Theme for Jekyll
 description:      "这里集合了各种b站的黑科技和b站的系统缺陷以及漏洞的公开。我们的宗旨就是：干翻b站！≖‿≖✧"
-url:              http://www.fuckbilibili.com
+url:              https://www.fuckbilibili.com
 baseurl:          ""
 
 # author:
@@ -29,3 +29,7 @@ exclude:
 
 gems:
 - jekyll-redirect-from
+
+miantags:
+- fuckbilibili
+- 哔哩哔哩
